--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Raducu_Alexandru_Gabriel_Lab2"
         mc:Ignorable="d"
-        Title="Virtual Doughnuts Factory" Height="550" Width="800" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
+        Title="Virtual Doughnuts Factory" Height="550" Width="800" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" Loaded="frmMain_Loaded">
     <Grid Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" Margin="0,0,-0.4,2">
         <Label x:Name="lblTitle" Content="Doughnuts  - Bake &amp; Sale" HorizontalAlignment="Center" Margin="0,63,0,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold"/>
         <GroupBox x:Name="gbRaised" Header="Raised" HorizontalAlignment="Left" Height="110" Margin="236,134,0,0" VerticalAlignment="Top" Width="139" FontWeight="Bold">
@@ -29,7 +29,7 @@
         <GroupBox x:Name="gbSale" Header="Current Sale" HorizontalAlignment="Center" Height="173" Margin="0,274,0,0" VerticalAlignment="Top" Width="468" FontWeight="Bold">
             <Canvas HorizontalAlignment="Left" Height="151" VerticalAlignment="Center" Width="458">
                 <Label x:Name="lblQuantity" Content="Quantity " Canvas.Left="10" Canvas.Top="13"/>
-                <TextBox x:Name="txtQuantity" Height="23" Canvas.Left="73" TextWrapping="Wrap" Text="0" Canvas.Top="14" Width="30"/>
+                <TextBox x:Name="txtQuantity" Height="23" Canvas.Left="73" TextWrapping="Wrap" Text="0" Canvas.Top="14" Width="30" KeyUp="txtQuantity_KeyPress"/>
                 <Label x:Name="lblType" Content="Type" Canvas.Left="107" Canvas.Top="13"/>
                 <ComboBox x:Name="cmbType" Canvas.Left="149" Canvas.Top="15" Width="80"/>
                 <Label x:Name="lblPrice" Content="Price" Canvas.Left="238" Canvas.Top="13"/>
@@ -44,17 +44,17 @@
         </GroupBox>
         <Menu x:Name="mnuMain" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="130">
             <MenuItem Header="File">
-                <MenuItem Header="Exit"/>
+                <MenuItem Header="Exit" Click="exitToolStripMenuItem_Click"/>
             </MenuItem>
             <MenuItem Header="_Doughnuts">
                 <MenuItem Header="Make">
                     <MenuItem Header="Raised">
-                        <MenuItem x:Name="glazedMenuItem" Header="Glazed"/>
-                        <MenuItem x:Name="sugarMenuItem" Header="Sugar"/>
+                        <MenuItem x:Name="glazedToolStripMenuItem" Header="Glazed" Click="glazedToolStripMenuItem_Click" IsCheckable="True"/>
+                        <MenuItem x:Name="sugarToolStripMenuItem" Header="Sugar" IsCheckable="True" Click="sugarToolStripMenuItem_Click"/>
                     </MenuItem>
                     <MenuItem Header="Filled"/>
                 </MenuItem>
-                <MenuItem Header="Stop"/>
+                <MenuItem x:Name="mnuStop" Header="Stop" Click="stopToolStripMenuItem_Click"/>
             </MenuItem>
         </Menu>
     </Grid>
