--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Raducu_Alexandru_Gabriel_Lab2"
+        xmlns:CustomCommands="clr-namespace:Raducu_Alexandru_Gabriel_Lab2.CustomCommands"
         mc:Ignorable="d"
         Title="Virtual Doughnuts Factory" Height="550" Width="800" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" Loaded="frmMain_Loaded">
-    <Grid Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" Margin="0,0,-0.4,2">
+    <Grid Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" Margin="0,0,-0.4,2" MenuItem.Click="FilledItemsShow_Click">
         <Label x:Name="lblTitle" Content="Doughnuts  - Bake &amp; Sale" HorizontalAlignment="Center" Margin="0,63,0,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold"/>
         <GroupBox x:Name="gbRaised" Header="Raised" HorizontalAlignment="Left" Height="110" Margin="236,134,0,0" VerticalAlignment="Top" Width="139" FontWeight="Bold">
             <Canvas HorizontalAlignment="Left" Height="85" VerticalAlignment="Top" Width="129">
@@ -31,15 +32,15 @@
                 <Label x:Name="lblQuantity" Content="Quantity " Canvas.Left="10" Canvas.Top="13"/>
                 <TextBox x:Name="txtQuantity" Height="23" Canvas.Left="73" TextWrapping="Wrap" Text="0" Canvas.Top="14" Width="30" KeyUp="txtQuantity_KeyPress"/>
                 <Label x:Name="lblType" Content="Type" Canvas.Left="107" Canvas.Top="13"/>
-                <ComboBox x:Name="cmbType" Canvas.Left="149" Canvas.Top="15" Width="80"/>
+                <ComboBox x:Name="cmbType" Canvas.Left="149" Canvas.Top="15" Width="80" SelectionChanged="cmbType_SelectionChanged"/>
                 <Label x:Name="lblPrice" Content="Price" Canvas.Left="238" Canvas.Top="13"/>
                 <TextBox x:Name="txtPrice" Height="23" Canvas.Left="284" TextWrapping="Wrap" Text="0" Canvas.Top="14" Width="60" IsReadOnly="True"/>
                 <ListBox x:Name="lstSale" Height="72" Canvas.Left="10" Canvas.Top="42" Width="334"/>
                 <Label x:Name="lblTotal" Content="Total" Canvas.Left="207" Canvas.Top="119"/>
                 <TextBox x:Name="txtTotal" Height="23" Canvas.Left="254" TextWrapping="Wrap" Text="0" Canvas.Top="122" Width="90" IsReadOnly="True"/>
-                <Button x:Name="btnAddToSale" Content="Add To Sale" Canvas.Left="359" Canvas.Top="42" Width="90"/>
-                <Button x:Name="btnRemoveItem" Content="Remove Item" Canvas.Left="359" Canvas.Top="68" Width="90"/>
-                <Button x:Name="btnCheckOut" Content="Check Out" Canvas.Left="367" Canvas.Top="122" Width="75"/>
+                <Button x:Name="btnAddToSale" Content="Add To Sale" Canvas.Left="359" Canvas.Top="42" Width="90" Click="btnAdd_Click"/>
+                <Button x:Name="btnRemoveItem" Content="Remove Item" Canvas.Left="359" Canvas.Top="68" Width="90" Click=" btnRemoveItem_Click"/>
+                <Button x:Name="btnCheckOut" Content="Check Out" Canvas.Left="367" Canvas.Top="122" Width="75" Click="btnCheckOut_Click"/>
             </Canvas>
         </GroupBox>
         <Menu x:Name="mnuMain" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" Width="130">
@@ -52,9 +53,14 @@
                         <MenuItem x:Name="glazedToolStripMenuItem" Header="Glazed" Click="glazedToolStripMenuItem_Click" IsCheckable="True"/>
                         <MenuItem x:Name="sugarToolStripMenuItem" Header="Sugar" IsCheckable="True" Click="sugarToolStripMenuItem_Click"/>
                     </MenuItem>
-                    <MenuItem Header="Filled"/>
+                    <MenuItem Header="Filled" Click="FilledItems_Click">
+                        <MenuItem x:Name="lemonFilledMenuItem" Header="Lemon" IsCheckable="True"/>
+                        <MenuItem x:Name="chocolateFilledMenuItem" Header="Chocolate" IsCheckable="True"/>
+                        <MenuItem x:Name="vanillaFilledMenuItem" Header="Vanilla" IsCheckable="True"/>
+                    </MenuItem>
                 </MenuItem>
-                <MenuItem x:Name="mnuStop" Header="Stop" Click="stopToolStripMenuItem_Click"/>
+                <MenuItem x:Name="mnuStop" Header="Stop" Click="stopToolStripMenuItem_Click" InputGestureText="Ctrl+S" Command="CustomCommands:StopCommand.Launch" />
+                <MenuItem Header="Inventory" Command="ApplicationCommands.Print"></MenuItem>
             </MenuItem>
         </Menu>
     </Grid>
